TAP5-2700: fixing bad JavaVersion enum value for Java 9